--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "test": "jest -i"
+    "test": "jest -i",
+    "start": "node src/main.js",
+    "dev": "nodemon src/main.js"
   },
   "jest": {
     "transform": {
